--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
     "flatpickr": "^4.5.1",
+    "graphql": "^0.10.5",
     "jquery": "^3.4.0",
     "nouislider": "^11.1.0",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.6.6",
+    "typescript": "^3.4.5",
     "vue-flatpickr-component": "^8.1.1",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
@@ -26,6 +27,7 @@
     "@vue/cli-service": "^3.4.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.6.6"
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   }
 }
