--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "acorn": "^6.1.1",
+    "autoprefixer": "^9.5.1",
     "bootstrap-vue": "^2.0.0-rc.11",
     "flatpickr": "^4.5.1",
     "graphql": "^0.10.5",
@@ -28,6 +30,8 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   }
 }
